--- a/Ecosphere/Jocelyn/Emberizidae.Rmd
+++ b/Ecosphere/Jocelyn/Emberizidae.Rmd
@@ -4,7 +4,7 @@ author: "Jocelyn Morales"
 date: "2024-03-11"
 output: 
   html_document: 
-    keep_md: true
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -44,11 +44,12 @@ emberizidae %>%
 
 ```{r}
  emberizidae%>%
-  filter(habitat != "NA") %>% 
+  filter(habitat != "NA" & habitat != "Various") %>% 
   count(habitat) %>% 
-  ggplot(aes(x=reorder(habitat, n), y=n))+
-  geom_col()+
-  labs(title = "Number of Indvividuals in Each Habitat",
+  ggplot(aes(x=reorder(habitat, n), y=n, fill = habitat))+
+  geom_col(color = "black", alpha=0.75)+
+  scale_fill_brewer(palette = "PuBuGn")+
+  labs(title = "Number of Individuals in Each Habitat",
       x="Habitat",
       y= "# of Individuals")
 ```
@@ -61,8 +62,9 @@ emberizidae %>%
 ```{r}
 emberizidae %>% 
   count(migratory_strategy) %>% 
-  ggplot(aes(x=reorder(migratory_strategy, n), y=n))+
-  geom_col()+
+  ggplot(aes(x=reorder(migratory_strategy, n), y=n, fill = migratory_strategy))+
+  geom_col(color = "black", alpha=0.75)+
+  scale_fill_brewer(palette = "PuBuGn")+
   labs(title = "Number of Individuals with Preferred Migratory Strategy",
        x= "Migratory Strategy",
        y= "Count")
@@ -70,9 +72,9 @@ emberizidae %>%
 
 ```{r}
 emberizidae %>% 
-  filter(habitat != "NA") %>%
+  filter(habitat != "NA" & habitat != "Various") %>%
   ggplot(aes(x=urban_affiliate, y=winter_range_area, fill = migratory_strategy))+
-  geom_boxplot()+
+  geom_boxplot(color = "black", alpha = 0.75)+
   scale_fill_brewer(palette = "PuBuGn")+
   scale_y_log10()+
   facet_wrap(~ habitat)+
@@ -82,14 +84,28 @@ emberizidae %>%
 ```{r}
 emberizidae %>% 
   ggplot(aes(x=migratory_strategy, y=winter_range_area, fill = habitat))+
-  geom_col(position = "dodge")+
+  geom_col (position = "dodge", color = "black", alpha=0.75)+
   scale_fill_brewer(palette = "PuBuGn")+
   coord_flip()
 ```
+
 ```{r}
 emberizidae %>% 
   ggplot(aes(x=urban_affiliate, fill = migratory_strategy))+
-  geom_bar(position = "dodge")+
+  geom_bar(position = "dodge", color = "black", alpha=0.75)+
   scale_fill_brewer(palette = "PuBuGn")
 ```
+
+```{r}
+emberizidae %>% 
+  filter(habitat != "NA" & habitat != "Various") %>%
+  ggplot(aes(x=reorder(habitat, winter_range_area), y=winter_range_area, fill = habitat))+
+  geom_col(position = position_dodge(width = 0.8), color = "black", alpha = 0.75, width = 0.7)+
+  scale_fill_brewer(palette = "PuBuGn")+
+  labs(x="habitat")
+
+```
+
+
+
 
