--- a/Ecosphere/App/(NEW) ecosphere_app.Rmd
+++ b/Ecosphere/App/(NEW) ecosphere_app.Rmd
@@ -67,7 +67,6 @@ ui <- dashboardPage(
   dashboardHeader(title = "Emberizidae"),
   dashboardSidebar(
     sidebarMenu(
-      menuItem("Diet Distribution Per Habitat", tabName = "tab1", icon = icon("chart-bar")),
       menuItem("Habitat Abundance Distribution", tabName = "tab2", icon = icon("chart-bar")),
       menuItem("Eggs per Clutch Distribution", tabName = "tab3", icon = icon("chart-bar")),
       menuItem("Bird Weight per Diet", tabName = "tab4", icon = icon("chart-bar")),
@@ -76,20 +75,11 @@ ui <- dashboardPage(
   ),
   dashboardBody(
     tabItems(
-      tabItem(tabName = "tab1",
-              fluidRow(
-                box(title = "Impact of Habitat on Diet", width = 12,
-                    selectInput("x", "Habitat Type!", choices = c("Grassland", "Shrubland", "Woodland", "Wetland"),
-                                selected = "Grassland"),
-                    plotOutput("plot1")
-                )
-              )
-      ),
       tabItem(tabName = "tab2",
               fluidRow(
-                box(title = "Impact of Urbanization of Habitat Abundance", width = 12,
+                box(title = "Impact of Urbanization on Habitat Abundance", width = 12,
                     radioButtons("y", "Select Urban Affiliation", choices = c("Yes", "No"),
-                                selected = "Yes"),
+                                 selected = "Yes"),
                     plotOutput("plot2")
                 )
               )
@@ -104,7 +94,7 @@ ui <- dashboardPage(
               )
       ),
       tabItem(tabName = "tab4",
-                fluidRow(
+              fluidRow(
                 box(title= "Bird Weight by Diet", width=12,
                     selectInput("a", "Habitat", choices = c("Grassland", "Shrubland", "Woodland", "Wetland"),
                                 selected = "Grassland"),
@@ -113,7 +103,7 @@ ui <- dashboardPage(
               )
       ),
       tabItem(tabName = "tab5",
-              h2("Ecosphere Variables Section"),
+              h2("Ecosphere Variables"),
               fluidRow(
                 box(title = "Defining our Variables", width = 11,
                     HTML("<ul>
@@ -133,8 +123,8 @@ ui <- dashboardPage(
                           </li>
                           <li>Reproduction Rates: 
                             <ul>
-                              <li>mean eggs per clutch: the mean # of eggs laid per clutch</li>
-                              <li>mean age of sexual maturity: mean age at which the species becomes sexually mature</li>
+                              <li>Mean eggs per clutch: the mean # of eggs laid per clutch</li>
+                              <li>Mean age of sexual maturity: mean age at which the species becomes sexually mature</li>
                               <li>Mass(g): Body mass in grams</li>
                           </ul>
                           </li>
@@ -155,27 +145,6 @@ ui <- dashboardPage(
 
 # Define server logic
 server <- function(input, output, session) {
-  output$plot1 <- renderPlot({
-    filtered_data <- emberizidae %>%
-      filter(habitat == input$x)
-    
-    # Calculate counts of each diet type within each habitat category
-    diet_counts <- filtered_data %>%
-      group_by(habitat) %>%
-      summarize(count = sum(diet))
-    
-    # Plotting
-    ggplot(diet_counts, aes(x = diet, y = count, fill = diet)) +
-      geom_bar(stat = "identity", color = "black", alpha = 0.75) +
-      scale_fill_brewer(palette = "PuBuGn") +
-      theme_minimal() +
-      labs(
-        title = "Count of Observations for Each Diet Type by Habitat",
-        x = "Type of Diet",
-        y = "Number of Observations",
-        fill = "Diet"
-      )
-})
 
 output$plot2 <- renderPlot({
     filtered_data <- emberizidae %>%
